# live-midi-splitter

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: release.yml
src/: backend.rs  gui.rs  main.rs  midi.rs  utils.rs
src/backend/: background_functions.rs  common_settings.rs  device.rs  input_settings.rs  midi_handler.rs  output_settings.rs  pipewire_utils.rs  preset.rs  properties.rs
src/backend/midi_handler/: event_buffer.rs  filter_map.rs
src/gui/: data.rs  keybinds.rs  state.rs  tabs.rs  widgets.rs
src/gui/tabs/: input_settings.rs  preset.rs  quick_start.rs  recent_files.rs
src/gui/widgets/: input_settings.rs  mapping_settings.rs  save_load.rs  transpose.rs
src/gui/widgets/mapping_settings/: cc_map.rs  note_filter.rs  velocity_map.rs
src/midi/: preset.rs
