[package]
name = "live-midi-splitter"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = { version = "0.9.1", features = ["jack"] }
serde = { version = "1", features = ["derive"] }
egui = "0.24.1"
eframe = { version = "0.24.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
midly = "0.5.3"
rfd = "0.12.1"
serde_json = "1.0.111"
dirs = "5.0.1"
egui_dnd = "0.5.1"