[package]
name = "live-midi-splitter"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = { version = "0.10.1", features = ["jack"] }
serde = { version = "1", features = ["derive"] }
egui = "0.27"
egui_extras = "0.27"
egui_plot = "0.27"
egui-modal = "0.3.0"
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
midly = "0.5.3"
rfd = "0.15.3"
serde_json = "1.0.111"
dirs = "6.0.0"
egui_dnd = "0.8.0"
pro-serde-versioned = "1.0.2"
regex = "1.10.4"
egui-phosphor = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
once_cell = "1.19.0"
open = "5.3.2"
shellexpand = "3.1.0"
egui-keybind = "0.3.0"
itertools = "0.14.0"

[lints.clippy]
clone_on_ref_ptr = "warn"
